# Observer-Pattern-C

./: CMakeLists.txt  README.md  main.c  observer.c  observer.h  provider.c  provider.h  std_includes.h
